---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/initialisation/struct/test_error_braced_init_of_struct_containing_struct_with_braced_struct_expr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/struct/test_error_braced_init_of_struct_containing_struct_with_braced_struct_expr.c"
   (struct Inner~0
      (member x @0 `int`)
      (member y @4 `int`)
      (member z @8 `int`))
   (struct Outer~1
      (member x @0 `int`)
      (member inner @4 `struct Inner~0 complete`)
      (member y @16 `int`))
   (function-definition external
      (main~2 `fn() -> int` (static main))
      (compound-statement
         (struct Inner~0
            (member x @0 `int`)
            (member y @4 `int`)
            (member z @8 `int`))
         (definition (inner~3 `struct Inner~0 complete` @0)
            (braced
               (subobject +0 (1 `int` @0))
               (subobject +4 (2 `int` @4))
               (subobject +8 (3 `int` @8))))
         (struct Outer~1
            (member x @0 `int`)
            (member inner @4 `struct Inner~0 complete`)
            (member y @16 `int`))
         (definition (outer~4 `struct Outer~1 complete` @12)
            (braced
               (subobject +0 (42 `int` @12))
               (subobject +4 (inner~3 `struct Inner~0 complete` @0))
               (subobject +16 (27 `int` @28)))))))

----- stderr -----
